--- a/foobar.html
+++ b/foobar.html
@@ -67,7 +67,7 @@
             font-weight: lighter;
             margin: 0;
           "
-          >This article is a work in progress. Last updated 17/05/2023.</span
+          >This article is a work in progress. Last updated 19/05/2023.</span
         >
         <p>
           Recently I completed Google's
@@ -637,6 +637,155 @@
               Input : solution('4')<br />
               Output: 2
             </div>
+            <p>
+              To solve the problem we can identify several principles for
+              minimising the number of operations to reach 1. Firstly, no
+              shortest trajectory would contain a \(+1\) operation immediately
+              followed by a \(-1\) operation, or vice versa, because any
+              trajectory containing any such consecutive operations could be
+              shortened by 2 steps by removing them. Secondly, even numbers
+              should always be divided by 2. This is because a trajectory that
+              repeats the other operations followed by a division can be
+              shortened by dividing first. For example, $$\begin{aligned} &2k
+              \rightarrow 2k\pm 1 \rightarrow 2k\pm 2 \rightarrow k\pm 1, \\ &2k
+              \rightarrow k \hphantom{2+1} \rightarrow k\pm 1, \end{aligned}$$
+              where \(k\) is any natural number. Basically, the number of
+              consecutive addition or subtraction operations can be cut in half
+              (or half plus 1) by dividing first. Note that this assumes that
+              eventually there will be another halving operation. Except in the
+              cases of \(n=2\) and \(n=3\) where both halving and subtracting 1
+              will work, in every other case halving requires fewer operations
+              than subtracting 1. Specifically, continuously subtracting 1
+              requires exactly \(n-1\) operations, while halving every even and
+              subtracting 1 off every odd number will require no more than
+              \(2\lceil \log_2 (n+1) \rceil -2\) (when \(n\) is one less than a
+              power of 2) operations and no less than \(\lceil \log_2 n \rceil\)
+              (when \(n\) is a power of 2) operations. Obviously, repeated
+              additions can never reach 1 since they strictly increase the
+              number. Therefore, for all \(n &gt; 3\) there exists a shortest
+              sequence of operations whereby every even value is halved, and the
+              number of even values is at least one.<br />
+              <br />
+              To decide on a rule for odd values, let us consider the two
+              possible cases where \(n=4k+1\) and \(n=4k+3\) for any natural
+              number, \(k\). In the first case we can draw the following
+              tree.<br />
+              <br />
+              <!-- 
+                \begin{tikzpicture}[]
+  % Define styles for the nodes
+  \tikzstyle{block} = [text width=0.9cm, text centered]
+
+  % Place nodes
+  \node [block] (n1) {$4k+1$};
+  \node [block, above right=0.1cm and 0.4cm of n1] (n2) {$4k+2$};
+  \node [block, right = 0.4cm of n2 ] (n3) {$2k+1$};
+  \node [block, above right=0.01cm and 0.4cm of n3] (n4) {$2k+2$};
+  \node [block, right = 0.4cm of n4] (n5) {$k+1$};
+  \node [block, below right=0.01cm and 0.4cm of n3] (n6) {$2k$};
+  \node [block, right = 0.4cm of n6] (n7) {$k$};
+  \node [block, below right=0.15cm and 0.4cm of n1] (n8) {$4k$};
+  \node [block, right = 0.4cm of n8] (n9) {$2k$};
+  \node [block, right = 0.4cm of n9] (n10) {$k$};
+  \node [color = red, right = 0.4cm of n10] (n11) {$k+1$};
+  \node [rectangle, color = red, draw, minimum height = 0.7cm, minimum width = 2.5cm] at (5.55cm,-0.66cm) (r1) {};
+  \node [rectangle, color = red, draw, minimum height = 1.7cm, minimum width = 1cm] at (6.2cm,0.66cm) (r1) {};
+
+  % Draw edges
+  \draw [->] (n1) -- (n2);
+  \draw [->] (n2) -- (n3);
+  \draw [->] (n3) -- (n4);
+  \draw [->] (n4) -- (n5);
+  \draw [->] (n3) -- (n6);
+  \draw [->] (n6) -- (n7);
+  \draw [->] (n1) -- (n8);
+  \draw [->] (n6) -- (n7);
+  \draw [->] (n8) -- (n9);
+  \draw [->] (n9) -- (n10);
+  \draw [->, color = red] (n10) -- (n11);
+\end{tikzpicture}
+               -->
+              <img
+                src="/images/foobar/foobar_c3c_a.svg"
+                alt="flow diagram"
+                class="tikz-diagram"
+              /><br />
+              In this case adding 1 inevitably leads to either \(k\) or \(k+1\),
+              both of which can be reached in fewer or equal number of
+              operations by subtracting 1. Therefore, when \(n=4k+1\)
+              subtracting 1 is weakly faster than adding 1. Given this strategy,
+              we can make an analogous decision tree for the \(n=4k+3\) case.<br />
+              <br />
+              <!-- 
+                \begin{tikzpicture}[]
+  % Define styles for the nodes
+  \tikzstyle{block} = [text width=0.9cm, text centered]
+
+  % Place nodes
+  \node [block] (n1) {$4k+3$};
+  \node [block, above right=0.1cm and 0.4cm of n1] (n2) {$4k+2$};
+  \node [block, right = 0.4cm of n2 ] (n3) {$2k+1$};
+  \node [block, above right=0.01cm and 0.4cm of n3] (n4) {$2k$};
+  \node [block, right = 0.4cm of n4] (n5) {$k$};
+  \node [block, below right=0.01cm and 0.4cm of n3] (n6) {$2k+2$};
+  \node [block, right = 0.4cm of n6] (n7) {$k+1$};
+  \node [block, below right=0.15cm and 0.4cm of n1] (n8) {$4k+4$};
+  \node [block, right = 0.4cm of n8] (n9) {$2k+2$};
+  \node [block, right = 0.4cm of n9] (n10) {$k+1$};
+  \node [color = red, text centered, right = 0.4cm of n10] (n11) {$k$};
+  \node [rectangle, color = red, draw, minimum height = 0.7cm, minimum width = 1.9cm] at (5.1cm,-0.66cm) (r1) {};
+  \node [rectangle, color = red, draw, minimum height = 1.7cm, minimum width = 1cm] at (6.2cm,0.66cm) (r1) {};
+
+  % Draw edges
+  \draw [->] (n1) -- (n2);
+  \draw [->] (n2) -- (n3);
+  \draw [->] (n3) -- (n4);
+  \draw [->] (n4) -- (n5);
+  \draw [->] (n3) -- (n6);
+  \draw [->] (n6) -- (n7);
+  \draw [->] (n1) -- (n8);
+  \draw [->] (n6) -- (n7);
+  \draw [->] (n8) -- (n9);
+  \draw [->] (n9) -- (n10);
+  \draw [->, color = red] (n10) -- (n11);
+\end{tikzpicture}
+               -->
+              <img
+                src="/images/foobar/foobar_c3c_b.svg"
+                alt="flow diagram"
+                class="tikz-diagram"
+              /><br />
+              Now choosing to subtract 1 will inevitably lead to either \(k\) or
+              \(k+1\), both of which can be reached in fewer or equal number of
+              operations by adding 1. Therefore, when \(n=4k+3\) adding 1 is
+              weakly faster than subtracting 1. <br />
+              <br />
+              Finally, let us consider the simple small cases of which cannot be
+              expressed as \(n=4k+r\). When \(n=1\) we do not need any
+              operations so return 0, when \(n=2\) follow the halving even rule
+              to get to 1 needs only 1 operation, and when \(n=3\) subtracting
+              1, rather than adding 1 is faster. Therefore, we can define the
+              following recursive function to solve the problem, \[
+              f(n)=\begin{cases} 0, & n = 1,\\[0.5em] 1 + f(n/2), & n \equiv 0
+              \mod{2},\\[0.5em] 1 + f(n-1), & n \equiv 1 \mod{4}, \text{ or }
+              n=3, \\[0.5em] 1 + f(n+1), & \text{otherwise.} \end{cases} \] This
+              solution can be implemented using a recursive function or a while
+              loop.
+            </p>
+            <pre><span class="line_wrapper"><span style="color:#e66170; font-weight:bold; ">def</span> solution<span style="color:#d2cd86; ">(</span>n<span style="color:#d2cd86; ">)</span><span style="color:#d2cd86; ">:</span></span>
+<span class="line_wrapper">    n <span style="color:#d2cd86; ">=</span> <span style="color:#e66170; font-weight:bold; ">long</span><span style="color:#d2cd86; ">(</span>n<span style="color:#d2cd86; ">)</span></span>
+<span class="line_wrapper">    count <span style="color:#d2cd86; ">=</span> <span style="color:#00a800; ">0</span></span>
+<span class="line_wrapper">    <span style="color:#e66170; font-weight:bold; ">while</span> n <span style="color:#00dddd; ">&gt;</span> <span style="color:#00a800; ">1</span><span style="color:#d2cd86; ">:</span></span>
+<span class="line_wrapper">        count <span style="color:#00dddd; ">+</span><span style="color:#d2cd86; ">=</span> <span style="color:#00a800; ">1</span></span>
+<span class="line_wrapper">        n1<span style="color:#d2cd86; ">,</span> r1 <span style="color:#d2cd86; ">=</span> <span style="color:#e66170; font-weight:bold; ">divmod</span><span style="color:#d2cd86; ">(</span>n<span style="color:#d2cd86; ">,</span> <span style="color:#00a800; ">2</span><span style="color:#d2cd86; ">)</span></span>
+<span class="line_wrapper">        n2<span style="color:#d2cd86; ">,</span> r2 <span style="color:#d2cd86; ">=</span> <span style="color:#e66170; font-weight:bold; ">divmod</span><span style="color:#d2cd86; ">(</span>n1<span style="color:#d2cd86; ">,</span> <span style="color:#00a800; ">2</span><span style="color:#d2cd86; ">)</span></span>
+<span class="line_wrapper">        <span style="color:#e66170; font-weight:bold; ">if</span> r1 <span style="color:#00dddd; ">==</span> <span style="color:#00a800; ">0</span><span style="color:#d2cd86; ">:</span></span>
+<span class="line_wrapper">            n <span style="color:#d2cd86; ">=</span> n1</span>
+<span class="line_wrapper">        <span style="color:#e66170; font-weight:bold; ">elif</span> <span style="color:#d2cd86; ">(</span>r2 <span style="color:#00dddd; ">!=</span> r1<span style="color:#d2cd86; ">)</span> <span style="color:#e66170; font-weight:bold; ">or</span> n <span style="color:#00dddd; ">==</span> <span style="color:#00a800; ">3</span><span style="color:#d2cd86; ">:</span></span>
+<span class="line_wrapper">            n <span style="color:#00dddd; ">-</span><span style="color:#d2cd86; ">=</span> <span style="color:#00a800; ">1</span></span>
+<span class="line_wrapper">        <span style="color:#e66170; font-weight:bold; ">else</span><span style="color:#d2cd86; ">:</span></span>
+<span class="line_wrapper">            n <span style="color:#00dddd; ">+</span><span style="color:#d2cd86; ">=</span> <span style="color:#00a800; ">1</span></span>
+<span class="line_wrapper">    <span style="color:#e66170; font-weight:bold; ">return</span> count</span></pre>
           </section>
         </section>
         <section class="foobar-challenge" id="sec-challenge4">
